Make an iframe test page.

--- a/static/index.css
+++ b/static/index.css
@@ -13,6 +13,13 @@ html {
   box-sizing: border-box;
 }
 
+iframe {
+  margin: 1em;
+  min-height: 500px;
+  width: 100%;
+  border: 4px solid #333;
+}
+
 html, body {
   height: 100%;
 }
