--- a/static/ckeditor_styles.css
+++ b/static/ckeditor_styles.css
@@ -2152,7 +2152,10 @@ legend.cke_voice_label {
 }
 
 
-#editorContainer{max-width: 1000px;margin:auto;display:flex;justify-content:center;align-items:center;top: 35px}.cke_contents{max-height: 395px}.cke_inner[style*="absolute"]>.cke_contents{max-height: none}#cke_editor1 {position:relative;width: 100%;border:0;}#buttonBar#buttonBar{right:25px;bottom:0;z-index: 10000}html[style*="fixed"], html[style*="fixed"] body{height:100%!important;width:100%!important}html[style*="fixed"] #cke_editor1{height: 100%;top: 0;position: absolute;}.cke_inner{position: relative;}
+/*
+Tele2 customization styles of Oracle Commerce BCC
+*/
+#editorContainer{max-width: 1000px;margin:auto;display:flex;justify-content:center;align-items:center;top: 35px}.cke_contents{max-height: 395px}.cke_inner[style*="absolute"]>.cke_contents{max-height: none}#cke_editor1 {position:relative;width: 100%;border:0;}#buttonBar#buttonBar{right:25px;bottom:0;z-index: 10000}html[style*="fixed"], html[style*="fixed"] body{height:100%!important;width:100%!important}html[style*="fixed"] #cke_editor1{height: 100%;top: 0;position: absolute;}.cke_inner{position: relative;width: 100% !important;}
 
 .cke_toolbox .dialogHolder {
   display: inline-block;
@@ -2169,7 +2172,7 @@ legend.cke_voice_label {
   z-index: 1;
 }
 
-.dialogHolder__button {
+.dialogHolder__button.dialogHolder__button {
   height: 28px;
   width: 30px;
   padding: 6px;
@@ -2189,13 +2192,14 @@ legend.cke_voice_label {
   width: 100%;
   height: 100%;
   display: block;
+  cursor: pointer;
 }
 
 .dialogHolder__button::-webkit-details-marker {
   display:none; 
 }
 
-.customDialog {
+.customDialog.customDialog {
   width: 100%;
   max-height: 80vh;
   max-width: 30vw;
@@ -2228,13 +2232,13 @@ legend.cke_voice_label {
   font-weight: bold;
 }
 
-.radioContainer {
+.radioContainer.radioContainer {
   display: flex;
   align-items: center;
   margin-bottom: 9px;
 }
 
-.selectInput {
+.selectInput.selectInput {
   font-size: 16px;
   margin-bottom: 10px;
   height: 40px;
@@ -2305,7 +2309,7 @@ legend.cke_voice_label {
   font-weight: normal;
 }
 
-.customDialog__content {
+.customDialog__content.customDialog__content {
   height: 100%!important;
   overflow: auto;
   padding: 0 8px!important;
@@ -2355,7 +2359,7 @@ legend.cke_voice_label {
   outline: 0;
 }
   
-.customDialog__closeButton {
+.customDialog__closeButton.customDialog__closeButton {
   height: max-content;
   width: auto;
   position: absolute;
@@ -2373,11 +2377,11 @@ legend.cke_voice_label {
   text-decoration: underline;
 }
 
-.formSection {
+.formSection.formSection {
   display: none;
 }
 
-.cke_maximized {
+.cke_maximized.cke_maximized {
   position: fixed;
   height: 100vh !important;
   width: 100vw !important;
